--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "2.4.3",
+    "cors": "2.8.5",
     "cpf": "2.0.1",
     "crypto": "1.0.1",
     "dotenv": "8.2.0",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@types/chai": "4.2.15",
+    "@types/cors": "2.8.10",
     "@types/express": "4.17.12",
     "@types/faker": "5.5.0",
     "@types/jsonwebtoken": "8.5.1",
