Add user - address relation

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "barrels:domain": "barrelsby --directory './src/domain' --delete --singleQuotes --location below",
     "barrels:mock": "barrelsby --directory './src/test/mock' --delete --singleQuotes",
     "barrels:seed": "barrelsby --directory './src/test/seed' --delete --singleQuotes",
-    "barrels": "yarn barrels:domain && yarn barrels:mock && yarn barrels:seed",
+    "barrels:entity": "barrelsby --directory './src/data/db/entity' --delete --singleQuotes",
+    "barrels": "yarn barrels:domain && yarn barrels:mock && yarn barrels:seed && yarn barrels:entity",
     "dev": "ts-node-dev -r tsconfig-paths/register --transpile-only --ignore-watch node_modules src/server.ts",
     "test": "NODE_ENV=test mocha -r ts-node/register -r tsconfig-paths/register --exit --timeout 30000 src/test/index.ts",
     "lint": "eslint --fix --ext .js,.ts src",
