--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "2.4.3",
+    "cep-promise": "4.1.0",
     "cors": "2.8.5",
     "cpf": "2.0.1",
     "crypto": "1.0.1",
