--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint": "7.20.0",
     "eslint-config-prettier": "7.2.0",
     "eslint-plugin-prettier": "3.3.1",
+    "express-async-errors": "^3.1.1",
     "faker": "5.5.2",
     "mocha": "8.3.0",
     "prettier": "2.2.1",
