--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "barrels:mock": "barrelsby --directory './src/test/mock' --delete --singleQuotes",
     "barrels:seed": "barrelsby --directory './src/test/seed' --delete --singleQuotes",
     "barrels:entity": "barrelsby --directory './src/data/db/entity' --delete --singleQuotes",
-    "barrels": "yarn barrels:domain && yarn barrels:mock && yarn barrels:seed && yarn barrels:entity",
+    "barrels:common": "barrelsby --directory './src/api/rest/common' --delete --singleQuotes",
+    "barrels": "yarn barrels:domain && yarn barrels:mock && yarn barrels:seed && yarn barrels:entity && yarn barrels:common",
     "dev": "ts-node-dev -r tsconfig-paths/register --transpile-only --ignore-watch node_modules src/server.ts",
     "test": "NODE_ENV=test mocha -r ts-node/register -r tsconfig-paths/register --exit --timeout 30000 src/test/index.ts",
     "lint": "eslint --fix --ext .js,.ts src",
@@ -25,6 +26,7 @@
     "crypto": "1.0.1",
     "dotenv": "8.2.0",
     "express": "4.17.1",
+    "express-validator": "6.12.0",
     "jsonwebtoken": "8.5.1",
     "pg": "8.5.1",
     "reflect-metadata": "0.1.13",
