--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "barrels:entity": "barrelsby --directory './src/data/db/entity' --delete --singleQuotes",
     "barrels:common": "barrelsby --directory './src/api/rest/common' --delete --singleQuotes",
     "barrels": "yarn barrels:domain && yarn barrels:mock && yarn barrels:seed && yarn barrels:entity && yarn barrels:common",
+    "build": "yarn clean-dist && tsc && yarn copy-resources",
+    "clean-dist": "rimraf ./dist || true",
+    "copy-resources": "copyup 'src/**/*.{json}' 'dist/'",
     "dev": "ts-node-dev -r tsconfig-paths/register --transpile-only --ignore-watch node_modules src/server.ts",
     "test": "NODE_ENV=test mocha -r ts-node/register -r tsconfig-paths/register --exit --timeout 30000 src/test/index.ts",
     "lint": "eslint --fix --ext .js,.ts src",
+    "start": "yarn build && node -r ./tsconfig-paths-dist.js dist/server.js",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "repository": "https://github.com/rodmagaldi/vacinas-server.git",
@@ -49,6 +53,7 @@
     "@typescript-eslint/parser": "4.15.1",
     "barrelsby": "2.2.0",
     "chai": "4.3.0",
+    "copyfiles": "2.4.1",
     "eslint": "7.20.0",
     "eslint-config-prettier": "7.2.0",
     "eslint-plugin-prettier": "3.3.1",
@@ -56,6 +61,7 @@
     "faker": "5.5.2",
     "mocha": "8.3.0",
     "prettier": "2.2.1",
+    "rimraf": "3.0.2",
     "supertest": "6.1.3",
     "ts-node": "9.1.1",
     "ts-node-dev": "1.1.1",
